Basic session handling with cookies

--- a/AspNetCoreSecurity/Pages/Secure.cshtml
+++ b/AspNetCoreSecurity/Pages/Secure.cshtml
@@ -1,12 +1,27 @@
 @page
+@using Microsoft.AspNetCore.Authentication;
 @model AspNetCoreSecurity.Pages.Secure
 
 <div>
+    <h1>Claims</h1>
     <dl>
         @foreach (var claim in User.Claims)
         {
             <dt>@claim.Type</dt>
             <dd>@claim.Value</dd>
+        }
+    </dl>
+
+    <h1>Properties</h1>
+    <dl>
+        @{
+            var authResult = await HttpContext.AuthenticateAsync();
+            var properties = authResult.Properties;
+        }
+        @foreach (var prop in properties.Items)
+        {
+            <dt>@prop.Key</dt>
+            <dd>@prop.Value</dd>
         }
     </dl>
 </div>
