Google external authentication with callback

--- a/AspNetCoreSecurity/Pages/Account/Login.cshtml
+++ b/AspNetCoreSecurity/Pages/Account/Login.cshtml
@@ -28,10 +28,10 @@
                 </div>
             </form>
 
-            @* <a asp-page="Google" *@
-            @*    asp-route-returnurl="@Model.ReturnUrl"> *@
-            @*     sign-in with google *@
-            @* </a> *@
+            <a asp-page="Google"
+               asp-route-returnurl="@Model.ReturnUrl">
+               sign-in with google
+            </a>
         </section>
     </div>
 </div>
